k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dilane-shop
  labels:
    app.kubernetes.io/name: dilane-shop
